@@ -22,9 +22,9 @@ import uk.gov.hmcts.et.common.model.ccd.items.RespondentSumTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.ReferralType;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.ReferralHelper;
-import uk.gov.hmcts.ethos.replacement.docmosis.service.CreateReferralService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.DocumentManagementService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.EmailService;
+import uk.gov.hmcts.ethos.replacement.docmosis.service.ReferralService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.UserService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.VerifyTokenService;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.JsonMapper;
@@ -32,7 +32,6 @@ import uk.gov.hmcts.ethos.utils.CCDRequestBuilder;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -62,11 +61,11 @@ class ReplyToReferralControllerTest {
     @MockBean
     private UserService userService;
     @MockBean
-    private EmailService emailService;
-    @MockBean
-    private CreateReferralService createReferralService;
+    private ReferralService referralService;
     @MockBean
     private DocumentManagementService documentManagementService;
+    @MockBean
+    private EmailService emailService;
     @Autowired
     private MockMvc mockMvc;
     @Autowired
@@ -75,6 +74,7 @@ class ReplyToReferralControllerTest {
 
     @BeforeEach
     void setUp() {
+        when(emailService.getExuiCaseLink(any())).thenReturn("exui");
         CaseData caseData = CaseDataBuilder.builder()
             .withHearing("1", "test", "Judy", "Venue", List.of("Telephone", "Video"),
                 "length num", "type", "Yes")
@@ -108,7 +108,7 @@ class ReplyToReferralControllerTest {
                 .build();
 
         UserDetails userDetails = new UserDetails();
-        userDetails.setRoles(Arrays.asList("role1"));
+        userDetails.setRoles(List.of("role1"));
         when(userService.getUserDetails(any())).thenReturn(userDetails);
     }
 
